--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,11 @@
                     </tr>
                 </tbody>
                 <tbody class="table-body"></tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="10"></td>
+                    </tr>
+                </tfoot>
             </table>
             <div class="table-footer"></div>
         </div>
