--- a/client/public/spec/index.html
+++ b/client/public/spec/index.html
@@ -11,7 +11,8 @@
     <script src="libs/jasmine-fixture.js"></script>
     <script src="libs/jquery.min.js"></script>
     <script src="../lib/jshp.js"></script>
-    <script src="jshp.spec.js"></script>
+    <script src="lesson1.jshp.spec.js"></script>
+    <script src="lesson2.jshp.spec.js"></script>
     <title>Document</title>
 </head>
 <body>
