--- a/client/public/spec/index.html
+++ b/client/public/spec/index.html
@@ -1,21 +1,26 @@
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="libs/jasmine.css">
-    <link rel="shortcut icon" type="image/png" href="libs/jasmine_favicon.png">
-    <script src="libs/jasmine.js"></script>
-    <script src="libs/jasmine-html.js"></script>
-    <script src="libs/boot.js"></script>
-    <script src="libs/jasmine-fixture.js"></script>
-    <script src="libs/jquery.min.js"></script>
-    <script src="../lib/jshp.js"></script>
-    <script src="lesson1.jshp.spec.js"></script>
-    <script src="lesson2.jshp.spec.js"></script>
-    <title>Document</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" type="text/css" href="libs/jasmine.css">
+        <link rel="shortcut icon" type="image/png" href="libs/jasmine_favicon.png">
 
-</body>
+        <script src="libs/jasmine.js"></script>
+        <script src="libs/jasmine-html.js"></script>
+        <script src="libs/boot.js"></script>
+        <script src="libs/jasmine-fixture.js"></script>
+        <script src="libs/jquery.min.js"></script>
+        <script src="libs/mock-ajax.js"></script>
+        <script src="../lib/jshp.js"></script>
+
+        <!-- specs -->
+        <script src="lesson0.jshp.spec.js"></script>
+        <script src="lesson1.jshp.spec.js"></script>
+        <script src="lesson2.jshp.spec.js"></script>
+        <script src="lesson3.jshp.spec.js"></script>
+        <title>Jasmine tests</title>
+    </head>
+
+    <body></body>
 </html>
