--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
         <p>Demo</p>
         <div class="table-container">
             <table class="table">
-                <thead></thead>
+                <thead class="thead"></thead>
                 <tbody class="table-filter">
                     <tr>
                         <td colspan="2"><button id="addFlight">add flight!</button></td>
@@ -21,11 +21,7 @@
                     </tr>
                 </tbody>
                 <tbody class="table-body"></tbody>
-                <tfoot>
-                    <tr>
-                        <td colspan="10"></td>
-                    </tr>
-                </tfoot>
+                <tfoot class="tfoot"></tfoot>
             </table>
             <div class="table-footer"></div>
         </div>
